# podcast-to-content

./: .env.example  .gitignore  AGENTS.md  README.md  autoblog.workflow.md  generate_image.py  pyproject.toml  requirements.txt  transcribe.py  upload_youtube_video.py  video-cuts.workflow.md
.claude/: settings.json
.claude/commands/: autoblog.md  newsletter.md  video-cuts.md  youtube-shorts.md
.claude/skills/video-cutter/: SKILL.md
.claude/skills/youtube-downloader/: SKILL.md
.claude/skills/youtube-thumbnail-generator/: SKILL.md
.claude/skills/youtube-thumbnail-generator/scripts/: resize_image.py
.claude/skills/youtube-uploader/: SKILL.md
.claude/skills/youtube-uploader/scripts/: upload_youtube_video.py
.claude/skills/youtube-video-updater/: SKILL.md
.claude/skills/youtube-video-updater/scripts/: update_youtube_thumbnail.py  update_youtube_video.py
.gemini/commands/: autoblog.toml  newsletter.toml  video-cuts.toml  youtube-shorts.toml
ZnCY5zV9B80/: post1.md  post2.md  post3.md  post4.md  post5.md  summary.md  transcript.txt
scripts/: adjust_srt.py  generate_image.py  generate_short.py  linkedin_poster.py  organize_folders.py  schedule_channel_videos.py  setup_linkedin.md  srt_to_text.py  transcribe.py  upload_youtube_short.py  wordpress_uploader.py
workflows/: autoblog.workflow.md  linkedin-posts-immigration-example.md  linkedin-repurposing-guide.md  newsletter.workflow.md  video-cuts.workflow.md  youtube-shorts.workflow.md
