[project]
name = "podcast-to-content"
version = "0.1.0"
description = "Automate content creation from podcasts and videos"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "youtube_transcript_api",
    "diffusers",
    "torch",
    "transformers",
    "requests",
    "openai",
    "python-dotenv",
    "markdown",
    "yt-dlp",
    "google-auth-oauthlib",
    "google-api-python-client",
    "google-generativeai",
    "google-genai",
    "pillow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
